--- a/ChessMP/ChessMP/MainWindow.xaml
+++ b/ChessMP/ChessMP/MainWindow.xaml
@@ -48,5 +48,34 @@
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
         </Border>
+
+        <Border Name="CapturedBlTiles" DockPanel.Dock="Left" Height="{Binding ElementName=board, Path=ActualHeight}" Width="148" DataContext="{Binding BoardViewModel}" Margin="20, 0, 0, 0">
+            <ItemsControl ItemsSource="{Binding CapturedBlTiles}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <UniformGrid Columns="2" Rows="8"/>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate DataType="{x:Type vm:BoardTileViewModel}">
+                        <Button VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch">
+                            <Border Background="{Binding Piece, Converter={StaticResource dynamicResource}}"/>
+                            <Button.Style>
+                                <Style TargetType="{x:Type Button}">
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding Color}" Value="Black">
+                                            <Setter Property="Background" Value="Gray"/>
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding Color}" Value="White">
+                                            <Setter Property="Background" Value="White"/>
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </Button.Style>
+                        </Button>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </Border>
     </DockPanel>
 </Window>
